# quanta

./: .gitignore  CMakeLists.txt  Quanta.g4  README.md  build.gradle.kts  build_parser.py  main.py  pyproject.toml  settings.gradle.kts
compiler0/: README.md  __init__.py  frontend.py  ir.py
examples/: hello_world.q  math.q
gradle/wrapper/: gradle-wrapper.properties
include/: IR.h
quanta/: ast.py  lexer.py  mir.py  parser.py  tokenizer.py
src/: IR.cpp  ast.hpp  main.cpp
src/frontend/: ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h  span.cpp  span.h  token.cpp  token.h  token_stream.cpp  token_stream.h
src/main/antlr/: Quanta.g4
src/main/java/org/quanta/: Main.java
src/main/java/org/quanta/frontend/: Frontend.java
src/main/java/org/quanta/ir/: ArrayIndex.java  ArrayLiteral.java  BoolLiteral.java  Expression.java  FieldAccess.java  FnCall.java  IRNode.java  IRVisitor.java  IntegerLiteral.java  Node.java  Statement.java  StringLiteral.java  SymbolLiteral.java  Visitor.java
tests/: lexer_tests.cpp  main.cpp  parser_tests.cpp
